# news-agent

./: AGENTS.md  verify_new_models.py  verify_output.txt  verify_output_retry.txt  verify_output_schema.txt
backend/: news_test.py  pyproject.toml  requirements.txt
backend/application/: error_handlers.py  etl_manager.py  media_download_handler.py
backend/application/endpoints/: static_files.py
backend/core/: config.py
backend/core/errors/: __init__.py  article_related.py  base.py  media_related.py
backend/core/utils/: __init__.py  iso.py
backend/database/: manager.py  models.py
backend/database/models/: media.py  news_data.py  raw_news_data.py
backend/domain/media/: __init__.py  protocols.py  supported_media_types.py  value_objects.py
backend/domain/news/: entities.py  protocols.py  value_objects.py
backend/infrastructure/database/: manager.py  repositories.py
backend/infrastructure/extraction/: html_extractor.py  loader.py
backend/infrastructure/media/: __init__.py
backend/infrastructure/sites/: bnt.json  nova.json
backend/infrastructure/sources/: rss_source.py  web_scraper_source.py
backend/migrations/models/: 0_20260204004213_init.py  0_20260206191049_init.py  1_20260212170000_add_quotes_to_raw_news_data.py
backend/news_sourcing/: manager.py  models.py  protocols.py  rss.py  scraper_source.py
backend/news_sourcing/models/: __init__.py  loader.py  (+1 more)
backend/scrapers/: base.py
backend/sites/: bnt.json  bta.rss.json  nova.json
backend/tests/: test_bnt_scraper.py  test_database_conn.py  test_html_extractor.py  test_rss_source.py
(+33 files in other folders)
