[project]
name = "news-agent"
version = "0.1.0"
description = "News Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aerich>=0.9.2",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "langchain[ollama]>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "lxml[html-clean]>=6.0.2",
    "newspaper3k>=0.2.8",
    "pydantic[settings]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "tavily-python>=0.7.21",
    "tortoise-orm[asyncpg]>=0.25.3",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
]

[tool.pytest.ini_options]
anyio_mode = "auto"
